--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Science fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: Hall of Mirrors
 url: http://www.gutenberg.org/ebooks/29720
